- Changed AddBird and AddImage to Ajax calls not to refresh page after those calls -  Using jquery unobstrusive validation - Corrected visibility of to-top button , once top was reached button was still visible

--- a/AvesTest2/wwwroot/css/categories.css
+++ b/AvesTest2/wwwroot/css/categories.css
@@ -51,6 +51,7 @@
 .descriptor-header {
     color: #ffffdd;
     font-size:24px;
+    margin:20px 0;
 }
 
 .selector-list {
